# EOS-testing

./: .gitignore  CMakeLists.txt  README.md
config/: credentials.hpp.example
examples/: CMakeLists.txt  simple_lobby.cpp
include/eos_testing/: eos_testing.hpp
include/eos_testing/auth/: auth_manager.hpp
include/eos_testing/core/: platform.hpp
include/eos_testing/lobby/: lobby_manager.hpp
include/eos_testing/matchmaking/: matchmaking_manager.hpp
include/eos_testing/p2p/: p2p_manager.hpp
include/eos_testing/voice/: voice_manager.hpp
src/auth/: CMakeLists.txt  auth_manager.cpp
src/core/: CMakeLists.txt  platform.cpp
src/lobby/: CMakeLists.txt  lobby_manager.cpp
src/matchmaking/: CMakeLists.txt  matchmaking_manager.cpp
src/p2p/: CMakeLists.txt  p2p_manager.cpp
src/voice/: CMakeLists.txt  voice_manager.cpp
tests/: CMakeLists.txt  client.cpp  host.cpp  test_client.cpp
